--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: Geongyu Lee Resume
-name: Geongyu Lee
+title: "Geongyu Lee Resume"
+name: "Geongyu Lee"
+description: "AI Researcher Resume Site"
 
 remote_theme: sproogen/modern-resume-theme
 
@@ -7,4 +8,16 @@ plugins:
   - jekyll-remote-theme
   - jekyll-seo-tag
 
+# Required for modern-resume-theme
 markdown: kramdown
+
+sass:
+  sass_dir: _sass
+  style: compressed
+
+# Dummy content so theme can load
+content:
+  - title: "About"
+    layout: text
+    content: |
+      This is a resume site for Geongyu Lee.
